fix Dockerfile for MapStore