@@ -1,25 +1,43 @@
-FROM tomcat:8.5-jdk8-openjdk
-MAINTAINER geosolutions<info@geo-solutions.it>
+FROM tomcat:9-jdk11-openjdk AS mother
+LABEL maintainer="Alessandro Parma<alessandro.parma@geo-solutions.it>"
+ENV MAPSTORE_WEBAPP_SRC="./.placeholder"
+ARG MAPSTORE_WEBAPP_SRC=""
+ADD "${MAPSTORE_WEBAPP_SRC}" "/mapstore/"
+
+COPY ./docker/* /mapstore/docker/
+WORKDIR /mapstore
+
+FROM tomcat:9-jdk11-openjdk
 
 # Tomcat specific options
 ENV CATALINA_BASE "$CATALINA_HOME"
-ENV JAVA_OPTS="${JAVA_OPTS}  -Xms512m -Xmx512m -XX:MaxPermSize=128m"
-
-# Optionally remove Tomcat manager, docs
-ARG TOMCAT_EXTRAS=false
-RUN if [ "$TOMCAT_EXTRAS" = false ]; then \
-      find "${CATALINA_BASE}/webapps/" -delete; \
-    fi
-
-# Add war files to be deployed
-COPY docker/*.war "${CATALINA_BASE}/webapps/"
-
-# Geostore externalization template. Disabled by default
-COPY docker/geostore-datasource-ovr.properties "${CATALINA_BASE}/conf/"
-ARG GEOSTORE_OVR_OPT=""
+ENV MAPSTORE_WEBAPP_DST="${CATALINA_BASE}/webapps"
+ENV INITIAL_MEMORY="512m"
+ENV MAXIMUM_MEMORY="512m"
+ARG OVR=""
+ARG PG_CLIENT_VERSION=""
+ENV JAVA_OPTS="${JAVA_OPTS} -Xms${INITIAL_MEMORY} -Xmx${MAXIMUM_MEMORY}"
+ENV GEOSTORE_OVR_OPT="-Dgeostore-ovr=file://${CATALINA_BASE}/conf/${OVR}"
 ENV JAVA_OPTS="${JAVA_OPTS} ${GEOSTORE_OVR_OPT}"
-
-# Set variable to better handle terminal commands
 ENV TERM xterm
+
+COPY --from=mother "/mapstore/mapstore.war" "${MAPSTORE_WEBAPP_DST}/mapstore.war"
+COPY --from=mother "/mapstore/docker" "${CATALINA_BASE}/docker/"
+
+WORKDIR ${CATALINA_BASE}
+
+RUN cp ${CATALINA_BASE}/docker/wait-for-postgres.sh /usr/bin/wait-for-postgres
+
+RUN cp ${CATALINA_BASE}/docker/${OVR} ${CATALINA_BASE}/conf
+
+RUN apt-get update \
+    && apt-get install --yes postgresql-client-${PG_CLIENT_VERSION} \
+    && apt-get clean \
+    && apt-get autoclean \
+    && apt-get autoremove -y \
+    && rm -rf /var/cache/apt/* \
+    && rm -rf /var/lib/apt/lists/* \
+    && rm -rf /usr/share/man/* \
+    && rm -rf /usr/share/doc/*
 
 EXPOSE 8080
